--- a/Kompetisi_Bultang.html
+++ b/Kompetisi_Bultang.html
@@ -105,29 +105,30 @@
     </nav>
 
     <!-- section/konten beranda -->
-    <section class="pt-44 bg-no-repeat bg-cover pb-40" style="background-image: url('img/KompetisiBultang.svg');">
-        <div class="container">
+    <section class="pt-44 bg-cover bg-no-repeat bg-center pb-40" style="background-image: url('img/KompetisiBultang.svg');">
+        <div class="container mx-auto">
             <div class="flex flex-wrap">
-                <div class="w-full self-center px-4 lg:w-1/2">
-                    <div class="mt-10 lg:mt-20 mb-1 lg:mb-5">
-                        <a href="#" class="font-poppins font-bold text-lg leading-5 text-pink2 bg-transparent border border-pink2 rounded-3xl py-1 px-8 hover:shadow-lg transition duration-300 ease-in-out" style="color:#D7137D;border-color:#D7137D">OLAHRAGA</a>
-                    </div>
-                    <h1 class="font-silverkids font-normal text-5xl lg:text-6xl leading-10 text-secondary2 uppercase mt-5 lg:mt-0 mb-5" style="text-shadow: 2px 2px 2px #D7137D;">Bulutangkis</h1>
-                    <p class="font-poppins font-normal text-base text-white leading-6 mb-10">Bulutangkis atau badminton adalah suatu olahraga yang menggunakan alat berbentuk bulat yang memiliki rongga-rongga di bagian pemukulnya dan memiliki gagang. Alat ini dikenal dengan nama raket yang dimainkan oleh dua orang atau dua pasangan yang saling berlawanan.</p>
-                    <div class="lg:flex lg:items-center lg:space-x-2">
-                        <div class="mb-10 lg:mb-0">
-                            <a href="#" class="font-poppins font-bold text-lg leading-5 text-primary2 bg-secondary2 rounded-xl py-3 px-8 hover:shadow-lg hover:bg-secondary3 transition duration-300 ease-in-out">Daftar Sekarang</a>
-                        </div>
-                        <div class="">
-                            <a href="#" class="font-poppins font-bold text-lg leading-5 text-secondary2 bg-transparent border border-secondary2 rounded-xl py-3 px-8 hover:shadow-lg hover:bg-primary3 transition duration-300 ease-in-out">Download Rulebook</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="flex w-full self-end px-4 lg:w-1/2">
-                    <div class="mt-10 lg:mt-24 lg:right-10">
+                <div class="flex justify-center w-full  px-4 lg:w-1/2 md:order-2">
+                    <div class=" lg:mt-24 ">
                         <img src="img/MASKOT BADMINTON.svg" alt="Logo BuluTangkis" class="max-w-full mx-auto">
                     </div>
                 </div>
+                <div class="w-full self-center px-4 lg:w-1/2">
+                    <div class="mt-0 lg:mt-20 mb-1 lg:mb-5 flex justify-center md:justify-start">
+                        <a href="#" class="font-poppins font-bold text-lg leading-5 text-pink2 bg-transparent border border-pink2 rounded-3xl py-1 px-8 hover:shadow-lg transition duration-300 ease-in-out" style="color:#D7137D;border-color:#D7137D">OLAHRAGA</a>
+                    </div>
+                    <h1 class="text-center md:text-left font-silverkids font-normal text-5xl lg:text-6xl leading-10 text-secondary2 uppercase mt-5 lg:mt-0 mb-5 md:py-4" style="text-shadow: 2px 2px 2px #D7137D;">Bulutangkis</h1>
+                    <p class="text-justify md:text-left font-poppins font-normal text-base text-white leading-6 mb-10">Bulutangkis atau badminton adalah suatu olahraga yang menggunakan alat berbentuk bulat yang memiliki rongga-rongga di bagian pemukulnya dan memiliki gagang. Alat ini dikenal dengan nama raket yang dimainkan oleh dua orang atau dua pasangan yang saling berlawanan.</p>
+                    <div class="lg:flex lg:items-center lg:space-x-2 pb-10 md:pb-0">
+                        <div class="mb-10 lg:mb-0 bg-secondary2 rounded-xl py-3 px-8 text-center">
+                            <a href="#" class="font-poppins font-bold text-lg leading-5 text-primary2  hover:shadow-lg hover:bg-secondary3 transition duration-300 ease-in-out">Daftar Sekarang</a>
+                        </div>
+                        <div class=" bg-transparent border border-secondary2 rounded-xl py-3 px-8 text-center">
+                            <a href="#" class="font-poppins font-bold text-lg leading-5 text-secondary2  hover:shadow-lg hover:bg-primary3 transition duration-300 ease-in-out">Download Rulebook</a>
+                        </div>
+                    </div>
+                </div>
+               
             </div>
         </div>
     </section>
@@ -140,8 +141,8 @@
                 <div class="flex justify-center items-center mb-10 lg:mb-20">
                     <img src="img/garis.svg">
                 </div>
-                <div class="flex justify-center items-center lg:mb-10">
-                    <img src="img/timeline.svg">
+                <div class="flex justify-center pb-10">
+                    <img src="img/timelineBultang-laptop.svg" alt="">
                 </div>
             </div>
         </div>
@@ -166,7 +167,7 @@
                             <div class="p-6 items-center">
                                 <h1 class="text-secondary2 text-2xl font-bold font-poppins text-center leading-7 mb-6">Second Place</h1>
                                 <p class="text-pink2 text-base leading-5 font-poppins font-bold text-center mb-6" style="color:#D7137D">
-                                    Rp 0.000.000
+                                   Coming Soon
                                 </p>
                                 <p class="text-secondary2 text-xs leading-4 font-poppins font-normal text-center mb-6">
                                     (Trofi + E-Sertifikat)
@@ -183,7 +184,7 @@
                             <div class="p-6 items-center">
                                 <h1 class="text-secondary2 text-2xl font-bold font-poppins text-center leading-7 mb-6">First Place</h1>
                                 <p class="text-pink2 text-base leading-5 font-poppins font-bold text-center mb-6" style="color:#D7137D">
-                                    Rp 0.000.000
+                                    Coming Soon
                                 </p>
                                 <p class="text-secondary2 text-xs leading-4 font-poppins font-normal text-center mb-6">
                                     (Trofi + E-Sertifikat)
@@ -199,7 +200,7 @@
                             <div class="p-6 items-center">
                                 <h1 class="text-secondary2 text-2xl font-bold font-poppins text-center leading-7 mb-6">Third Place</h1>
                                 <p class="text-pink2 text-base leading-5 font-poppins font-bold text-center mb-6" style="color:#D7137D">
-                                    Rp 0.000.000
+                                    Coming Soon
                                 </p>
                                 <p class="text-secondary2 text-xs leading-4 font-poppins font-normal text-center mb-6">
                                     (Trofi + E-Sertifikat)
