--- a/Dashboard.html
+++ b/Dashboard.html
@@ -73,73 +73,64 @@
                 </nav>
             </div>
             <!-- main content -->
-            <div class="md:grid md:grid-cols-3 ">
-                 <!-- grid content tim -->
-                 <div class="grid-1 md:order-last bg-primary2 py-5 ">
-                    <div class="  bg-primary2     right-0  md:relative md:translate-x-0 ">
-                        <div class="w-64 p-5 text-primary1 inset-y-0 right-0 transform bg-secondary2 m-10 rounded-lg z-0">
-                            <p class="text-primary1 text-3xl font-bold">Nama Tim</p> 
-                            <p class="text-primary1 text-2xl font-light">Universitas Brawijaya</p>
-                        </div>
-                        <div class="m-10">
-                            <p class="text-lg text-secondary2  font-bold">UPLOAD BERKAS TIM</p> 
-                            <hr class="mt-2 text-secondary2">
-                            <p class="text-[20px] text-secondary2  py-4 font-bold">Surat Tugas dari Universitas*</p> 
-                            <button class="bg-secondary2 px-3 py-2 font-bold rounded-md">Upload Link</button>
-                            <p class="text-[20px] text-secondary2  py-4 font-bold">Bukti Transfer Biaya Pendaftaran*</p> 
-                            <button class="bg-secondary2 px-3 py-2 font-bold rounded-md">Upload Link</button>
-                            <p class="text-sm text-white pt-10">Catatan</p>
-                            <ul class="list-disc text-white text-sm mb-5">
-                                <li>Memasukkan Berkas yang dibutuhkan pada Google Drive dan upload link Google Drive yang berisi berkas tersebut pada tempat yang telah disediakan.</li>
-                            </ul>
+            <div class="w-full p-5">
+                <div class="flex items-center ">
+                    <i class="fa-solid fa-angle-left text-white text-2xl"></i>
+                    <p class="text-white font-bold text-2xl px-3"> DASHBOARD</p>
+                </div>
+                <div class="md:flex py-5 w-full">
+                    <div class="w-full my-5 lg:my-0 ">
+                        <div class="rounded-3xl shadow-lg bg-white mx-3 h-96">
+                          <img class=" rounded-t-lg w-60 h-44 block mx-auto" src="img/MASKOT BADMINTON.svg" alt=""/>
+                          <div class="p-6">
+                            <h1 class="text-primary2 text-lg font-bold font-poppins uppercase leading-6 mb-6">BULUTANGKIS</h1>
+                            <p class="text-primary2 text-base leading-4 font-poppins font-normal mb-6">
+                              Telah mendaftar dan formulir belum dikirim.
+                            </p>
+                            <div class="flex justify-between items-center">
+                              <button type="button" class=" inline-block px-7 py-3 bg-primary2 text-secondary2 font-poppins font-bold text-lg leading-5 rounded-xl shadow-md hover:bg-secondary2 hover:text-primary2 hover:shadow-lg focus:bg-primary3 focus:shadow-lg focus:outline-none focus:ring-0 active:bg-primary2 active:shadow-lg transition duration-150 ease-in-out">Lihat Formulir</button>
+                              <button type="button" class=" inline-block px-4 py-3 border-2 border-red2 text-red2 font-poppins font-bold text-lg leading-5 rounded-xl shadow-md hover:bg-red2 hover:text-natural7 hover:shadow-lg focus:bg-primary3 focus:shadow-lg focus:outline-none focus:ring-0 active:bg-red3 active:shadow-lg transition duration-150 ease-in-out">
+                                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" class="w-4 h-4 fill-red2">
+                                  <path d="M135.2 17.69C140.6 6.848 151.7 0 163.8 0H284.2C296.3 0 307.4 6.848 312.8 17.69L320 32H416C433.7 32 448 46.33 448 64C448 81.67 433.7 96 416 96H32C14.33 96 0 81.67 0 64C0 46.33 14.33 32 32 32H128L135.2 17.69zM31.1 128H416V448C416 483.3 387.3 512 352 512H95.1C60.65 512 31.1 483.3 31.1 448V128zM111.1 208V432C111.1 440.8 119.2 448 127.1 448C136.8 448 143.1 440.8 143.1 432V208C143.1 199.2 136.8 192 127.1 192C119.2 192 111.1 199.2 111.1 208zM207.1 208V432C207.1 440.8 215.2 448 223.1 448C232.8 448 240 440.8 240 432V208C240 199.2 232.8 192 223.1 192C215.2 192 207.1 199.2 207.1 208zM304 208V432C304 440.8 311.2 448 320 448C328.8 448 336 440.8 336 432V208C336 199.2 328.8 192 320 192C311.2 192 304 199.2 304 208z"/>
+                                </svg>
+                              </button>
+                            </div>
+                          </div>
                         </div>
                       </div>
+                      <!-- end card -->
+                      <!-- card -->
+                  <div class="w-full my-5 lg:my-0">
+                    <div class="rounded-3xl shadow-lg bg-white mx-3 h-96">
+                      <img class=" rounded-t-lg w-44 h-44 block mx-auto" src="img/MASKOT BT BASKET.svg" alt=""/>
+                      <div class="p-6">
+                        <h1 class="text-primary2 text-lg font-bold font-poppins uppercase leading-6 mb-20">BASKET</h1>
+                        <div class="text-center  mt-10">
+                          <p class="text-primary2 text-lg text-center font-bold font-poppins leading-6">Terdaftar<p>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <!-- end card -->
+                <!-- card -->
+                <div class="w-full my-5 lg:my-0">
+                    <div class="rounded-3xl shadow-lg bg-white mx-3 h-96">
+                      <img class=" rounded-t-lg w-44 h-44 block mx-auto" src="img/MASKOT BADMINTON.svg" alt=""/>
+                      <div class="p-6">
+                        <h1 class="text-primary2 text-lg font-bold font-poppins uppercase leading-6 mb-20">BULUTANGKIS</h1>
+                        <div class="flex justify-center mt-10">
+                          <button type="button" class=" inline-block px-7 py-3 bg-primary2 text-secondary2 font-poppins font-bold text-lg leading-5 rounded-xl shadow-md hover:bg-secondary2 hover:text-primary2 hover:shadow-lg focus:bg-primary3 focus:shadow-lg focus:outline-none focus:ring-0 active:bg-primary2 active:shadow-lg transition duration-150 ease-in-out">Daftar Sekarang</button>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
                 </div>
-                <!-- grid content peserta -->
-                <div class="grid-2 md:grid-3 col-span-2 p-10 mb-20">
-                    <div class="flex items-center ">
-                        <i class="fa-solid fa-angle-left text-white text-2xl"></i>
-                        <p class="text-white font-bold text-2xl px-3"> BASKET</p>
-                    </div>
-                    <!-- table leader -->
-                    <div class="official pt-2">
-                        <p class="pt-4 font-bold pb-2 text-lg text-secondary2">OFFICIAL</p> 
-                        <hr class="mb-5">
-                        <table class="w-full border-2  border-secondary2">
-                            <tr class=" ">
-                                <td class="bg-secondary2 text-primary1 font-bold text-center py-2 text-lg">NO</td>
-                                <td class="bg-secondary2 border-none font-bold text-center py-2 text-lg">NAMA</td>
-                                <td class="bg-secondary2 text-primary1 font-bold text-center py-2 text-lg">DETAIL</td>
-                            </tr>
-                            <tr class="">
-                                <td class="text-center font-poppins text-lg text-white py-2">1</td>
-                                <td class=" border-2 border-secondary2 font-poppins text-lg text-white py-2">Anda Bagas Aprianto</td>
-                                <td class="text-center font-poppins text-primary1 py-2"><button class="bg-secondary2 text-sm px-4 font-bold rounded-md py-2">Lihat</button></td>
-                            </tr>
-                        </table>
-                    </div>
-                    <!-- tabel player -->
-                    <div class="official pt-5">
-                        <p class="pt-4 font-bold pb-2 text-lg text-secondary2">PESERTA</p> 
-                        <hr class="mb-5">
-                        <table class="w-full border-2  border-secondary2">
-                            <tr class=" ">
-                                <td class="bg-secondary2 text-primary1 font-bold text-center py-2 text-lg">NO</td>
-                                <td class="bg-secondary2 border-none font-bold text-center py-2 text-lg">NAMA</td>
-                                <td class="bg-secondary2 text-primary1 font-bold text-center py-2 text-lg">DETAIL</td>
-                            </tr>
-                            <tr class="">
-                                <td class="text-center font-poppins text-lg text-white py-2">1</td>
-                                <td class=" border-2 border-secondary2 font-poppins text-lg text-white py-2">Anda Bagas Aprianto</td>
-                                <td class="text-center font-poppins text-primary1 py-2"><button class="bg-secondary2 text-sm px-4 font-bold rounded-md py-2">Lihat</button></td>
-                            </tr>
-                        </table>
-                        <button class="my-5 bg-secondary2 text-lg float-right px-10 font-bold rounded-md py-2">Kirim</button>
-                    </div>
-                </div>
+                
+                
             </div>
         </div>
     </section>
+
     <footer class="text-center lg:text-left bg-secondary2 text-primary2 rounded-3xl">
         <div class="mx-auto lg:mx-20 py-10 text-center md:text-left md:flex md:justify-between">
             <div class="grid grid-cols-2 md:grid-cols-2 md:mb-0 sm:gap-6 sm:grid-cols-5 lg:grid-cols-5 gap-8">
