--- a/Index.html
+++ b/Index.html
@@ -20,11 +20,11 @@
 </head>
 <body class="bg-primary1">
     <!-- navbar -->
-    <nav class="bg-primary2 sticky top-0 px-10 sm:px-4 py-2.5 shadow-lg">
+    <nav class="bg-primary2 sticky top-0 px-10 sm:px-4 py-2.5 shadow-lg z-50">
         <div class="container flex flex-wrap justify-between items-center mx-auto">
             <!-- logo -->
             <a href="#" class="flex items-center ml-10">
-                <img src="img/logoNavbar.svg" class="mr-3 h-16 sm:h-9" alt="Brawijaya Tournament Logo">
+                <img src="img/logoNavbar.svg" class="mr-3 w-full h-16 sm:h-16" alt="Brawijaya Tournament Logo">
             </a>
             <!-- button daftar dan masuk -->
             <div class="flex items-center space-x-2 md:order-2 mr-10">
@@ -140,8 +140,8 @@
                 <img src="img/Group 1194.svg" alt="" class="w-1/3  float-right right-0">
             </div>
            
-            <div class=" container mx-auto py-20 md:py-0 md:mb-28">
-                <img src="img/maskot.svg" alt="" class="mx-auto">
+            <div class=" container mx-auto py-20 md:py-14 md:mb-28">
+                <img src="img/maskot.svg" alt="" class="mx-auto" >
                 <div class="md:grid md:grid-cols-3 items-center">
                     <div class="">
                         <img src="img/emmet.svg" alt="">
@@ -184,7 +184,7 @@
                               </div>
                             </div>
                               <div>
-                                <div class="w-full my-5 lg:my-0">
+                                <div class="w-full my-5 lg:my-0 ">
                                     <div class="rounded-3xl shadow-lg mx-3 h-96" style="background-color:#FFF2D4 ;">
                                       <div class="p-6">
                                         <h1 class="text-primary2 text-2xl font-bold uppercase leading-6  text-center">FUTSAL</h1>
