--- a/DashboardOuput.html
+++ b/DashboardOuput.html
@@ -14,9 +14,11 @@
     <script src="https://kit.fontawesome.com/a951d809d8.js" crossorigin="anonymous"></script>
 	<link href="https://fonts.googleapis.com/css?family=Source+Code+Pro|Roboto&display=swap" rel="stylesheet">
     <script src="https://unpkg.com/flowbite@1.5.2/dist/flowbite.js"></script>
+    <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet" />
+	<script src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v2.x.x/dist/alpine.min.js" defer></script>
     <title>Brawijaya Tournament</title>
 </head>
-<body class="bg-primary1">
+<body class="bg-primary1" x-data="{ 'showModal': false }" @keydown.escape="showModal = false" x-cloak>
     <!-- navbar -->
     <nav class="bg-primary2 px-10 sm:px-4 py-2.5 shadow-lg ">
         <div class="container flex flex-wrap justify-between items-center mx-auto">
@@ -46,6 +48,54 @@
 
     <!-- section/konten -->
     <section class="bg-primary1">
+        <!-- MODAL DETAIL -->
+        <div class="overflow-auto" style="background-color: rgba(0,0,0,0.5)" x-show="showModal" :class="{ 'absolute inset-0 z-10 flex items-center justify-center': showModal }">
+        <div class="bg-secondary2 w-11/12 md:max-w-lg mx-auto rounded-lg shadow-lg py-4 text-left px-6" x-show="showModal" @click.away="showModal = false" x-transition:enter="ease-out duration-300" x-transition:enter-start="opacity-0 scale-90" x-transition:enter-end="opacity-100 scale-100" x-transition:leave="ease-in duration-300" x-transition:leave-start="opacity-100 scale-100" x-transition:leave-end="opacity-0 scale-90">
+            <!--HEADER-->
+            <div class="flex justify-between items-center pb-3">
+                <div class="cursor-pointer z-50" @click="showModal = false">
+                    <svg class="fill-current text-black" xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 18 18">
+                        <path d="M14.53 4.53l-1.06-1.06L9 7.94 4.53 3.47 3.47 4.53 7.94 9l-4.47 4.47 1.06 1.06L9 10.06l4.47 4.47 1.06-1.06L10.06 9z"></path>
+                    </svg>
+                </div>
+            </div>
+            <!-- content -->
+            <div class="pb-10">
+                <table>
+                    <tr>
+                        <td class="font-bold">Nama : </td>
+                        <td>Anda Bagas Aprianto</td>
+                    </tr>
+                    <tr>
+                        <td class="font-bold">Jenis Kelamin : </td>
+                        <td>Laki-laki</td>
+                    </tr>
+                    <tr>
+                        <td class="font-bold">Email : </td>
+                        <td>andabagas@email.com</td>
+                    </tr>
+                    <tr>
+                        <td class="font-bold">No Telepon/ No HP : </td>
+                        <td>081233334444</td>
+                    </tr>
+                    <tr>
+                        <td class="font-bold">Fakultas : </td>
+                        <td>Fakultas Ilmu Komputer</td>
+                    </tr>
+                    <tr>
+                        <td class="font-bold">Angkatan : </td>
+                        <td>2022</td>
+                    </tr>
+                    <tr>
+                        <td class="font-bold flex-wrap" >Berkas Individu : </td>
+                        <td>https://brawijayatournament.ub.ac.id/</td>
+                    </tr>
+                </table>      
+            </div>            
+        </div>
+        <!--/Dialog -->
+    </div>
+    <!-- /Overlay -->
         <div class="md:flex-row ">
             <!-- grid sidebar -->
             <div class="relative md:flex">
@@ -114,7 +164,7 @@
                             <tr class="">
                                 <td class="text-center font-poppins text-lg text-white py-2">1</td>
                                 <td class=" border-2 border-secondary2 font-poppins text-lg text-white py-2">Anda Bagas Aprianto</td>
-                                <td class="text-center font-poppins text-primary1 py-2"><button class="bg-secondary2 text-sm px-4 font-bold rounded-md py-2">Lihat</button></td>
+                                <td class="text-center font-poppins text-primary1 py-2"><button class="bg-secondary2 text-sm px-4 font-bold rounded-md py-2" @click="showModal = true">Lihat</button></td>
                             </tr>
                         </table>
                     </div>
